--- a/style.css
+++ b/style.css
@@ -4,20 +4,20 @@
     box-sizing: border-box;
 }
 body{
-    background-color: gray;
+    background-color: black;
 }
 header{
     background-color: black;
     height: 200px;
     width: 100%;
-    background-color: gray;
+    background-color: black;
 }
 #header img{
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin: 20px;
-    box-shadow: 0px 0px 10px black;
+    box-shadow: 0px 0px 10px white;
 }
 #header{
     display: flex;
@@ -36,7 +36,7 @@ header{
 width: 300px;
 height: 400px;
 border-radius: 10%;
-box-shadow: 0px 0px 10px black;
+box-shadow: 0px 0px 10px white;
 margin-top: -2%;
 margin-left: 38%;
 
