--- a/style2.css
+++ b/style2.css
@@ -1,30 +1,36 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
-body{
-    background-color: gray;
+body {
+  background-color: gray;
 }
-#card{
-    position: relative;
-    width: 200px;
-    height: 300px;
- border: 1px solid black;
-    border-radius: 10px;
-background-color: black;
+.card {
+  position: relative;
+  width: 200px;
+  height: 300px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: black;
+  box-shadow: 0px 0px 10px black;
 }
-#mdiv{
-    margin-top: 20px;
-    margin-left: 30px;
+#mdiv {
+  margin-top: 20px;
+  margin-left: 30px;
 }
-#div{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+#div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
-img{
-    border-radius: 10px;
-    width: 199px;
-    height: 250px;
+img {
+  border-radius: 10px;
+  width: 199px;
+  height: 250px;
+  opacity: 0.3;
+}
+
+.highlight {
+  opacity: 1;
 }
