--- a/style3.css
+++ b/style3.css
@@ -1,8 +1,46 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
-body{
-    background-color: gray;
+body {
+  background-color: gray;
+}
+.maincontainer {
+  position: relative;
+  width: 200px;
+  height: 300px;
+  border-radius: 10px;
+  background-color: green;
+}
+.thecard {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 0.5 ease;
+  border-radius: 10px;
+
+}
+.thefront {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 10px;
+  background-image: url("Image/the-godfather-eps-vector-logo.png");
+  background-size: cover; /* Adjust as needed */
+  background-position: center center;
+}
+.thecard:hover {
+  transform: rotateY(180deg);
+  transition: 5000;
+}
+.theback {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
 }
