--- a/style3.css
+++ b/style3.css
@@ -6,41 +6,24 @@
 body {
   background-color: gray;
 }
-.maincontainer {
-  position: relative;
-  width: 200px;
+img{
+  width: 220px;
   height: 300px;
   border-radius: 10px;
-  background-color: green;
 }
-.thecard {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  transition: all 0.5 ease;
+#input{
+  padding: 10px;
+}
+input{
+  padding: 10px;
   border-radius: 10px;
-
 }
-.thefront {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 10px;
-  background-image: url("Image/the-godfather-eps-vector-logo.png");
-  background-size: cover; /* Adjust as needed */
-  background-position: center center;
+.maincontainer{
+  margin-left: 20px;
+  margin-top: 20px;
 }
-.thecard:hover {
-  transform: rotateY(180deg);
-  transition: 5000;
-}
-.theback {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  backface-visibility: hidden;
-  transform: rotateY(180deg);
+.card_container{
+ flex-wrap: wrap;
+  display: flex;
+  gap: 5px;
 }
